--- a/front/src/components/Navbar/Navbar.css
+++ b/front/src/components/Navbar/Navbar.css
@@ -1,27 +1,27 @@
+.main-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
 
-    .main-nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 5px 20px;
-    }
+}
 
-  
-   .main-nav NavLink{
-    font-weight: bold;
-    color: #2c3e50;
-    
-  } 
+.main-nav NavLink {
+  font-weight: bold;
+  color: #2c3e50;
+}
 
-  .main-nav-logo {
-    display: flex;
-    align-items: center;
-  }
+.main-nav-logo {
+  display: flex;
+  align-items: center;
 
-  .mmain-nav-logo-image {
-   
-  height: 7vh;
-   margin: 10px 0 0 0;
-  }
+}
 
-  
+.main-nav-logo img{
+  width: 150px;
+}
+.mmain-nav-logo-image {
+  margin: 10px 0 0 0;
+ height: 7vh;
+ 
+ }
